--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -2259,26 +2259,29 @@ ita:
       baseUrl: "https://openklant.example.nl"
       apiKey: "REP_OPENKLANT_CREDENTIALS_ITA_TOKEN_REP"
     object:
-      baseUrl: "http://objecten.podiumd.svc.cluster.local/api/v2/"
+      baseUrl: "https://objecten.example.nl/api/v2/"
       apiKey: "REP_OBJECTEN_CREDENTIALS_ITA_TOKEN_REP"
     zaakSysteem:
-      baseUrl: "http://openzaak-nginx.podiumd.svc.cluster.local"
+      baseUrl: "https://openzaak.example.nl"
       clientId: "ita"
       key: "REP_OPENZAAK_CREDENTIALS_ITA_SECRET_REP"
 
   logboek:
-    type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/uuid-van-objecttype-activiteitenlog
+    type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/2eb81bd1-0d2b-4123-84ab-d55b99b9e75a
     typeVersion: 1
+    # uuid in bovenstaande waarde kan afwijken als het objecttype handmatig is aangemaakt 
 
   afdeling:
-    uuid: "REP_CONTACT_AFDELING_UUID_REP"
-    type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/uuid-van-objecttype-afdeling
+    uuid: "c8d301f9-80b8-4575-8b29-3e9431f92994"
+    type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/c8d301f9-80b8-4575-8b29-3e9431f92994
     typeVersion: 1
+    # uuid in bovenstaande waarden kan afwijken als het objecttype handmatig is aangemaakt 
 
   groep:
-    uuid: "REP_CONTACT_GROEP_UUID_REP"
-    type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/uuid-van-objecttype-groep
+    uuid: "cbec27ac-157b-490b-b586-9e8a8f5bbb85"
+    type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/cbec27ac-157b-490b-b586-9e8a8f5bbb85
     typeVersion: 1
+    # uuid in bovenstaande waarden kan afwijken als het objecttype handmatig is aangemaakt 
 
   smtp:
     host: "mail.example.nl"
