--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -403,7 +403,7 @@ openzaak:
     #       api_type: nrc
     #       auth_type: zgw
     #       client_id: open-zaak
-    #       secret: 
+    #       secret:
     #         value_from:
     #           env: openzaak_opennotificaties_secret
     #     - identifier: selectielijst-api
@@ -427,7 +427,7 @@ openzaak:
     #         value_from:
     #           env: opennotificaties_autorisatie_api_secret
     #     - identifier: open-zaak
-    #       secret: 
+    #       secret:
     #         value_from:
     #           env: openzaak_opennotificaties_secret
     #   sites_config_enable: true
@@ -603,7 +603,7 @@ opennotificaties:
     #         api_type: ac
     #         auth_type: zgw
     #         client_id: open-notificaties
-    #         secret: 
+    #         secret:
     #           value_from:
     #             env: opennotificaties_autorisatie_api_secret
     #         user_id: open-notificaties
@@ -637,7 +637,7 @@ opennotificaties:
     #           env: openzaak_opennotificaties_secret
     #     # Credentials for Open Notificaties to talk to itself
     #     - identifier: open-notificaties
-    #       secret: 
+    #       secret:
     #         value_from:
     #           env: opennotificaties_opennotificaties_secret
     #   notifications_kanalen_config_enable: true
@@ -690,7 +690,7 @@ opennotificaties:
     #         identifier: open-notificaties
     #         callback_url: https://opennotificaties.example.nl/api/v1/callbacks
     #         client_id: open-notificaties
-    #         secret: 
+    #         secret:
     #           value_from:
     #             env: opennotificaties_opennotificaties_secret
     #   notifications_abonnementen_config_enable: true
@@ -799,7 +799,7 @@ objecten:
     #     - identifier: admin-oidc
     #       enabled: True
     #       oidc_rp_client_id: objecten.example.nl
-    #       oidc_rp_client_secret: 
+    #       oidc_rp_client_secret:
     #         value_from:
     #           env: keycloak_client_secret
     #       oidc_rp_scopes_list:
@@ -1001,7 +1001,7 @@ objecttypen:
     #         application: Objecten API
     #         administration: Administration 1
     #       - identifier: openformulier-token
-    #         token: 
+    #         token:
     #           value_from:
     #             env: openformulieren_objecten_token
     #         contact_person: Person 1
@@ -1269,7 +1269,7 @@ openklant:
     #       auth_type: zgw
     #       client_id: open-klant
     #       user_id: open-klant
-    #       secret: 
+    #       secret:
     #         value_from:
     #           env: openklant_token
     #   notifications_config_enable: true
@@ -1390,8 +1390,8 @@ openformulieren:
     #           claim_path: ["loa"]
     #           default: "urn:oasis:names:tc:SAML:2.0:ac:classes:MobileTwoFactorContract"
     #           value_mapping: []
-    #         identity_settings: 
-    #           bsn_claim_path: ["bsn"]    
+    #         identity_settings:
+    #           bsn_claim_path: ["bsn"]
     #   zgw_consumers_config_enable: True
     #   zgw_consumers:
     #     services:
@@ -1674,7 +1674,7 @@ openinwoner:
   persistentVolume:
     volumeAttributeShareName: openinwoner
   image:
-    tag: "1.35.1"
+    tag: "1.35.2"
   resources:
     requests:
       cpu: 200m
@@ -2213,6 +2213,12 @@ apiproxy:
       <<: *commonLocation
       path: /lvbag/individuelebevragingen/v2/
       targetUrl: "https://lab.api.mijniconnect.nl/iconnect/apibagib/v2/"
+      # BAG URL rewriting in response bodies - replaces external URLs with internal proxy URLs
+      urlRewrite:
+        enabled: false # Set to true to enable response URL rewriting
+        # The internal URL that will be used in rewritten responses
+        # Should be the public-facing URL where this api-proxy is accessible
+        internalUrl: "http://api-proxy/lvbag/individuelebevragingen/v2/"
     brp:
       <<: *commonLocation
       path: /haalcentraal/api/brp/
@@ -2228,7 +2234,7 @@ apiproxy:
       targetUrl: "https://lab.api.mijniconnect.nl/iconnect/apikvk/vesprof/v1/v1/vestigingsprofielen"
 
 ita:
-  baseUrl: ""
+  baseUrl: "https://ontw-ita.example.nl"
   enabled: true
   replicaCount: 1
   imagePullSecrets: []
@@ -2250,29 +2256,32 @@ ita:
 
   apiConnections:
     openKlant:
-      baseUrl: "http://openklant.podiumd.svc.cluster.local"
+      baseUrl: "https://openklant.example.nl"
       apiKey: "REP_OPENKLANT_CREDENTIALS_ITA_TOKEN_REP"
     object:
-      baseUrl: "http://objecten.podiumd.svc.cluster.local"
+      baseUrl: "https://objecten.example.nl/api/v2/"
       apiKey: "REP_OBJECTEN_CREDENTIALS_ITA_TOKEN_REP"
     zaakSysteem:
-      baseUrl: "http://openzaak-nginx.podiumd.svc.cluster.local"
+      baseUrl: "https://openzaak.example.nl"
       clientId: "ita"
       key: "REP_OPENZAAK_CREDENTIALS_ITA_SECRET_REP"
 
   logboek:
-    type: ""
+    type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/2eb81bd1-0d2b-4123-84ab-d55b99b9e75a
     typeVersion: 1
+    # uuid in bovenstaande waarde kan afwijken als het objecttype handmatig is aangemaakt 
 
   afdeling:
-    uuid: "REP_CONTACT_AFDELING_UUID_REP"
-    type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/{{ .Values.ita.afdeling.uuid }}
+    uuid: "c8d301f9-80b8-4575-8b29-3e9431f92994"
+    type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/c8d301f9-80b8-4575-8b29-3e9431f92994
     typeVersion: 1
+    # uuid in bovenstaande waarden kan afwijken als het objecttype handmatig is aangemaakt 
 
   groep:
-    uuid: "REP_CONTACT_GROEP_UUID_REP"
-    type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/{{ .Values.ita.groep.uuid }}
+    uuid: "cbec27ac-157b-490b-b586-9e8a8f5bbb85"
+    type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/cbec27ac-157b-490b-b586-9e8a8f5bbb85
     typeVersion: 1
+    # uuid in bovenstaande waarden kan afwijken als het objecttype handmatig is aangemaakt 
 
   smtp:
     host: "mail.example.nl"
@@ -2285,7 +2294,7 @@ ita:
   web:
     image:
       repository: "ghcr.io/interne-taak-afhandeling/internetaakafhandeling.web"
-      tag: "2.0.0"
+      tag: "2.0.1"
       pullPolicy: IfNotPresent
 
     service:
@@ -2297,7 +2306,7 @@ ita:
       frontendUrl: "REP_ITA_OIDC_FRONTEND_URL_REP"
       clientId: "ita"
       clientSecret: "REP_ITA_OIDC_CLIENT_SECRET_REP"
-      itaSystemAccessRole: "ITA_SystemAccess"
+      itaSystemAccessRole: "ITA_Gebruiker"
       functioneelBeheerderRole: "ITA_Functioneel_Beheerder"
       nameClaimType: "preferred_username"
       roleClaimType: "roles"
