--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -51,6 +51,10 @@ dependencies:
     version: 1.12.0
     repository: "@maykinmedia"
     condition: openinwoner.enabled
+  - name: openbeheer
+    version: 0.1.1
+    repository: "@maykinmedia"
+    condition: openbeheer.enabled
   - name: kiss-elastic
     alias: kisselastic
     version: 1.1.0
