fixed inconsistency with values.yaml in spelling of ITA roles

--- a/charts/podiumd/templates/keycloak-config-configmap.yaml
+++ b/charts/podiumd/templates/keycloak-config-configmap.yaml
@@ -631,7 +631,8 @@ data:
           - name: recordmanager
           - name: domein_elk_zaaktype
         ita:
-          - name: ITA-Gebruiker
+          - name: ITA_Gebruiker
+          - name: ITA_Functioneel_Beheerder
     {{- end }}
     {{- if not .Values.keycloak.config.skipGroups }}
     groups:
@@ -653,7 +654,8 @@ data:
           abc:
             - "administrators"
           ita:
-            - "ITA-Gebruiker"
+            - "ITA_Gebruiker"
+            - "ITA_Functioneel_Beheerder"
           monitoring:
             - "admin"
           objecten:
