:bug: Fix missing existing claim name

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1805,7 +1805,7 @@ openbeheer:
     enabled: true
     size: 1Gi
     storageClassName: ""
-    existingClaim: null
+    existingClaim: openbeheer
     mediaMountSubpath: openbeheer/media
   settings:
     allowedHosts: ""
