:bug: Missing persistentVolume value

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1807,6 +1807,8 @@ openbeheer:
     storageClassName: ""
     existingClaim: openbeheer
     mediaMountSubpath: openbeheer/media
+  persistentVolume:
+    volumeAttributeShareName: openbeheer
   settings:
     allowedHosts: ""
     djangoSettingsModule: openbeheer.conf.docker
