add pabc to podiumd

--- a/charts/podiumd/templates/keycloak-config-configmap.yaml
+++ b/charts/podiumd/templates/keycloak-config-configmap.yaml
@@ -522,6 +522,37 @@ data:
               claim.name: "groups"
               jsonType.label: "String"
               usermodel.clientRoleMapping.clientId: "ita"
+      - clientId: {{ .Values.pabc.settings.oidc.clientId }}
+        name: PABC OIDC Client
+        enabled: true
+        clientAuthenticatorType: client-secret
+        redirectUris:
+          - "{{ .Values.pabc.settings.oidc.oidcUrl | trimSuffix "/" }}/*"
+        webOrigins:
+          - "{{ .Values.pabc.settings.oidc.oidcUrl | trimSuffix "/" }}/*"
+        secret: {{ .Values.pabc.settings.oidc.clientSecret | quote }}
+        protocolMappers:
+          - name: "client roles"
+            protocol: "openid-connect"
+            protocolMapper: "oidc-usermodel-client-role-mapper"
+            consentRequired: false
+            config:
+              introspection.token.claim: "true"
+              multivalued: "true"
+              userinfo.token.claim: "false"
+              id.token.claim: "true"
+              user.attribute: "foo"
+              lightweight.claim: "false"
+              access.token.claim: "true"
+              claim.name: "roles"
+              jsonType.label: "String"
+              usermodel.clientRoleMapping.clientId: "pabc"
+      - clientId: {{ .Values.pabc.settings.keycloakAdmin.clientId }}
+        name: PABC Keycloak Admin REST API client
+        enabled: true
+        clientAuthenticatorType: client-secret
+        secret: {{ .Values.pabc.settings.keycloakAdmin.clientSecret | quote }}
+        serviceAccountsEnabled: true
     clientScopes:
       - name: roles
         description: OpenID Connect scope for add user roles to the access token
@@ -580,6 +611,16 @@ data:
             - "view-users"
           account:
             - "view-groups"
+      - username: "service-account-{{ .Values.pabc.settings.keycloakAdmin.clientId }}"
+        enabled: "true"
+        totp: "false"
+        serviceAccountClientId: "{{ .Values.pabc.settings.keycloakAdmin.clientId }}"
+        clientRoles:
+          realm-management:
+            - "view-users"
+            - "view-realm"
+          account:
+            - "view-groups"
     smtpServer:
       starttls: {{ .Values.keycloak.config.smtp.starttls }}
       port: {{ .Values.keycloak.config.smtp.port }}
@@ -632,6 +673,8 @@ data:
           - name: domein_elk_zaaktype
         ita:
           - name: ITA-Gebruiker
+        pabc:
+          - name: administrator
     {{- end }}
     {{- if not .Values.keycloak.config.skipGroups }}
     groups:
@@ -670,6 +713,8 @@ data:
             - "administrators"
           opennotificaties:
             - "administrators"
+          pabc:
+            - "administrator"
       - name: "behandelaars"
         path: "/behandelaars"
         attributes:
