--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -78,3 +78,9 @@ dependencies:
     repository: "oci://ghcr.io/interne-taak-afhandeling"
     version: 2.0.1
     condition: ita.enabled
+  - name: kiss-chart
+    alias: kiss
+    repository: "oci://ghcr.io/klantinteractie-servicesysteem"
+    version: 2.0.0-rc.0
+    condition: kiss.enabled
+
