--- a/charts/podiumd/templates/keycloak-config-configmap.yaml
+++ b/charts/podiumd/templates/keycloak-config-configmap.yaml
@@ -519,9 +519,21 @@ data:
               user.attribute: "foo"
               lightweight.claim: "false"
               access.token.claim: "true"
-              claim.name: "groups"
+              claim.name: "roles"
               jsonType.label: "String"
               usermodel.clientRoleMapping.clientId: "ita"
+          - name: samaccountname
+            protocol: openid-connect
+            protocolMapper: oidc-usermodel-attribute-mapper
+            config:
+              introspection.token.claim: true
+              userinfo.token.claim: true
+              user.attribute: samaccountname
+              id.token.claim: true
+              lightweight.claim: false
+              access.token.claim: true
+              claim.name: samaccountname
+              jsonType.label: String
       - clientId: {{ .Values.pabc.settings.oidc.clientId }}
         name: PABC OIDC Client
         enabled: true
