--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -2264,7 +2264,7 @@ apiproxy:
       targetUrl: "https://lab.api.mijniconnect.nl/iconnect/apikvk/vesprof/v1/v1/vestigingsprofielen"
 
 ita:
-  baseUrl: "https://ontw-ita.example.nl"
+  baseUrl: "https://ita.example.nl"
   enabled: true
   replicaCount: 1
   imagePullSecrets: []
@@ -2286,7 +2286,7 @@ ita:
 
   apiConnections:
     openKlant:
-      baseUrl: "https://openklant.example.nl"
+      baseUrl: "https://openklant.example.nl/klantinteracties/api/v1/"
       apiKey: "REP_OPENKLANT_CREDENTIALS_ITA_TOKEN_REP"
     object:
       baseUrl: "https://objecten.example.nl/api/v2/"
@@ -2297,28 +2297,28 @@ ita:
       key: "REP_OPENZAAK_CREDENTIALS_ITA_SECRET_REP"
 
   logboek:
+    # uuid hieronder gaat ervan uit dat Objecttype is aangemaakt mbv create-required-objecttypen.yaml
     type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/2eb81bd1-0d2b-4123-84ab-d55b99b9e75a
     typeVersion: 1
-    # uuid in bovenstaande waarde kan afwijken als het objecttype handmatig is aangemaakt
 
   afdeling:
+    # uuid hieronder gaat ervan uit dat Objecttype is aangemaakt mbv create-required-objecttypen.yaml
     uuid: "c8d301f9-80b8-4575-8b29-3e9431f92994"
     type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/c8d301f9-80b8-4575-8b29-3e9431f92994
     typeVersion: 1
-    # uuid in bovenstaande waarden kan afwijken als het objecttype handmatig is aangemaakt
 
   groep:
+    # uuid hieronder gaat ervan uit dat Objecttype is aangemaakt mbv create-required-objecttypen.yaml
     uuid: "cbec27ac-157b-490b-b586-9e8a8f5bbb85"
     type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/cbec27ac-157b-490b-b586-9e8a8f5bbb85
     typeVersion: 1
-    # uuid in bovenstaande waarden kan afwijken als het objecttype handmatig is aangemaakt
 
   smtp:
-    host: "mail.example.nl"
+    host: "mail.enschede.nl"
     port: "587"
-    username: "dummy"
-    password: "dummy"
-    fromEmail: "from@domain.ext"
+    username: ""
+    password: ""
+    fromEmail: ""
     enableSsl: "true"
 
   web:
@@ -2338,7 +2338,7 @@ ita:
       clientSecret: "REP_ITA_OIDC_CLIENT_SECRET_REP"
       itaSystemAccessRole: "ITA_Gebruiker"
       functioneelBeheerderRole: "ITA_Functioneel_Beheerder"
-      nameClaimType: "preferred_username"
+      nameClaimType: "name"
       roleClaimType: "roles"
       objectregisterMedewerkerIdClaimType: "samaccountname"
       emailClaimType: "email"
