--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -2296,20 +2296,19 @@ ita:
       key: "REP_OPENZAAK_CREDENTIALS_ITA_SECRET_REP"
 
   logboek:
-    # uuid hieronder gaat ervan uit dat Objecttype is aangemaakt mbv create-required-objecttypen.yaml
-    type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/2eb81bd1-0d2b-4123-84ab-d55b99b9e75a
+    # Aanname: uuid van objecttype wordt gemeentespecifiek vervangen door Replacementscripts
+    type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/REP_ITA_ACTIVITEITENLOG_UUID_REP
     typeVersion: 1
 
   afdeling:
-    # uuid hieronder gaat ervan uit dat Objecttype is aangemaakt mbv create-required-objecttypen.yaml
-    uuid: "c8d301f9-80b8-4575-8b29-3e9431f92994"
-    type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/c8d301f9-80b8-4575-8b29-3e9431f92994
+    # Aanname: uuid van objecttype wordt gemeentespecifiek vervangen door Replacementscripts
+    uuid: "REP_CONTACT_AFDELING_UUID_REP"
+    type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/REP_CONTACT_AFDELING_UUID_REP
     typeVersion: 1
 
   groep:
-    # uuid hieronder gaat ervan uit dat Objecttype is aangemaakt mbv create-required-objecttypen.yaml
-    uuid: "cbec27ac-157b-490b-b586-9e8a8f5bbb85"
-    type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/cbec27ac-157b-490b-b586-9e8a8f5bbb85
+    uuid: "REP_CONTACT_GROEP_UUID_REP"
+    type: https://ontw-objecttypen.example.nl/api/v2/objecttypes/REP_CONTACT_GROEP_UUID_REP
     typeVersion: 1
 
   smtp:
